--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@floating-ui/vue": "^1.0.6",
     "dayjs": "^1.11.10",
     "delay": "^6.0.0",
+    "lodash-es": "^4.17.21",
     "maska": "^2.1.11",
     "vue-json-pretty": "^2.4.0"
   },
@@ -23,6 +24,7 @@
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/color-mode": "^3.4.0",
     "@nuxtjs/device": "^3.1.1",
+    "@types/lodash-es": "^4.17.12",
     "@unocss/eslint-plugin": "^0.59.3",
     "@unocss/nuxt": "^0.59.4",
     "@vueuse/nuxt": "^10.9.0",
